# CanadaLauncher

./: Cargo.toml  LICENSE.md  README.md  package-lock.json  package.json
src/: App.css  App.tsx  main.rs
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: data_structs.rs  dowloader.rs  lib.rs  main.rs
src-tauri/src/dowloader/: loader_installer.rs  minecraft_instancier.rs
ui/: app-window.slint
