[package]
name = "CanadaLauncher"
version = "0.1.2"
edition = "2021"

[dependencies]
mega = "0.8.0"
reqwest = "0.12.11"
self_update = { version = "0.41.0", features = ["archive-zip"] }
slint = "1.8.0"
slint-build = "1.9.1"
tokio = { version = "1.42.0", features = ["full"] }
zip = "2.2.2"

[build-dependencies]
slint-build = "1.8.0"
