[package]
name = "CanadaDowloader"
version = "0.1.4"
description = "A Canada Mod Downloader"
authors = ["Wimt"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "canadadowloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
self_update = { version = "0.42.0", features = ["archive-zip"] }
zip = "2.2.2"
reqwest = { version = "0.12.12", features = ["json"] }
aws-sdk-s3 = "1.74.0"
dotenv = "0.15"
dirs = "6.0"
base64 = "0.22.1"
